Fixed the aligment of state/overflow

--- a/src/components/NoteState/NoteState.scss
+++ b/src/components/NoteState/NoteState.scss
@@ -5,7 +5,8 @@
   display: flex;
   justify-content: flex-end;
   user-select: none;
-  padding: 8px 10px;
+  padding-top: 8px;
+  padding-left: 10px;
   right: -10px;
   top: -8px;
 
